daemonset-xmrig.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: xmrig
  labels:
    app.kubernetes.io/name: xmrig
  annotations:
    polaris.fairwinds.com/tagNotSpecified-exempt: true
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: xmrig
  template:
    metadata:
      labels:
        app.kubernetes.io/name: xmrig
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    name: xmrig
                topologyKey: kubernetes.io/hostname
      containers:
        - name: xmrig
          image: miningcontainers/xmrig:latest
          args:
            - "-k"
            - "--tls"
            - "-o"
            - "pool.supportxmr.com:443"
            - "-u"
            - "47TWgJVGf9qTNZhtrm9BiEek8d6k7AXuaFd5SF7bwA8A1ujXq39ngESUm1cwJu6H91fVAtebVHUuYXs7VCBp8MLKHAF4Eho"
          resources:
            limits:
              memory: "4Gi"
              cpu: "2"
