networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: xmrig
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: xmrig
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: xmrig
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system

  egress:
    # namespace-local
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: xmrig

    # public internet only
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
